Fixed gaps in recommendations

--- a/components/recommendations/recommendations.css
+++ b/components/recommendations/recommendations.css
@@ -29,7 +29,7 @@ body {
   display: inline-flex;
   flex-direction: column;
   padding: 0.5em 0;
-  width: 250px;
+  width: 300px;
 }
 
 .recommendations .recommendation-item hr {
@@ -41,6 +41,13 @@ body {
   display: inline-flex;
   flex-direction: row;
   column-gap: 1em;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.recommendations .profile-details {
+  display: inline-flex;
+  column-gap: 0.5em;
   align-items: center;
 }
 
